# swagger.json
@@ -2,16 +2,16 @@
   "swagger": "2.0",
   "info": {
     "title": "Ball Players API",
-    "description": "Basketball Team Players API",
+    "description": "Basketball Team Player API",
     "version": "1.0.0"
   },
-  "host": "basketball-players-api.onrender.com",
+  "host": "https://basketball-players-api.onrender.com",
   "basePath": "/",
   "schemes": [
     "https"
   ],
   "paths": {
-    "/": {
+    "/home": {
       "get": {
         "tags": [
           "Ball Players"
@@ -20,6 +20,26 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/login": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api-docs": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
@@ -43,7 +63,7 @@
     "/players/{id}": {
       "get": {
         "tags": [
-          "Get team player by _id"
+          "Get team player by id"
         ],
         "description": "",
         "parameters": [
@@ -110,8 +130,11 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -126,7 +149,7 @@
       },
       "delete": {
         "tags": [
-          "Delete team player by _id"
+          "Delete team player by id"
         ],
         "description": "",
         "parameters": [
@@ -140,6 +163,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -194,6 +220,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "422": {
             "description": "Unprocessable Entity"
